[project]
name = "rocky_worlds_utils"
description = "Utility Tools for the Rocky Worlds DDT Project"
readme = "README.md"
authors = [
  { name = "Mees Fix" },
  { name = "Kyle Conroy" },
  { name = "Leonardo Dos Santos" },
]
keywords = ["astronomy", "python"]
classifiers = ["Programming Language :: Python"]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.0.1",
    "astroquery>=0.4.10",
    "calcos>=3.6.1",
    "costools>=1.2.6",
    "crds>=12.1.10",
    "matplotlib>=3.10.3",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "stistools>=1.4.5",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]  
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "stsci_rtd_theme",
]

[project.license]
file = "LICENSE"
content-type = "text/plain"

[build-system]
requires = ["setuptools >= 61.2",
            "setuptools_scm[toml]>=7.1"]
build-backend = 'setuptools.build_meta'

[project.scripts]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]

[tool.pytest]
junit_family = "xunit2"
